# photon-tools

./: .gitignore  LICENSE.md  README.md  postBuild  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
notebooks/: 01_quickstart.ipynb  02_screening_browser.ipynb  03_custom_loader.ipynb
notebooks/temp/: 01_registry_test.ipynb  02_hdf5_test.ipynb  03_preview_test.ipynb  04_browse_files.ipynb  05_formats_test.ipynb
src/photon_tools/: __init__.py  model.py  registry.py
src/photon_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/photon_tools/formats/: ni_binary_s1.py  photon_hdf5.py  spc.py
src/photon_tools/viz/: browser.py  preview.py
tests/: conftest.py  test_loader_hdf5.py  test_loader_ni_binary.py  test_loader_spc.py  test_model.py  test_preview.py  test_registry.py
tests/data/: ni_no_ttl_min  photon_hdf5_min.h5  spc_min.spc
